--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,15 @@
     <artifactId>todolist-mvc</artifactId>
     <version>1.0-SNAPSHOT</version>
     <name>Todolist MVC parent module</name>
+         
+    <dependencies>
+        <!-- DataSource -->
+        <dependency>
+            <groupId>c3p0</groupId>
+            <artifactId>c3p0</artifactId>
+            <version>0.9.1.2</version>
+        </dependency>
+    </dependencies>     
     <description>A vulnerable demo application, initially based on Ben Hassine's TodoMVC.</description>
     <url>https://github.com/snyk/java-goof</url>
 
